Indicidual user order access

--- a/WCSTrainer/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/WCSTrainer/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -2,8 +2,8 @@
 @model AccessDeniedModel
 
 <header>
-    <div class="flex-column flex-center">
-        <h1 class="text-danger">Access denied</h1>
-        <p class="text-danger">You do not have access to this resource.</p>
-    </div>
+   <div class="access flex-column flex-center">
+      <h1>Access denied</h1>
+      <p>You do not have access to this resource.</p>
+   </div>
 </header>
