--- a/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/AllView.cshtml
@@ -1,5 +1,10 @@
 ﻿@page
 @model WCSTrainer.Pages.TrainingOrders.AllViewModel
+
+@using Microsoft.AspNetCore.Identity;
+@inject SignInManager<UserAccount> SignInManager
+@inject UserManager<UserAccount> UserManager
+
 @{
    ViewData["Title"] = "AllView";
 }
@@ -23,22 +28,34 @@
                   <th>Priority Level</th>
                   <th></th>
                </tr>
-               @foreach (var item in Model.TrainingOrder.Reverse()) {
-                  if (Model.listCount < Model.maxCount) {
-                     <tr class="clickable">
-                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Status)</td>
-                        @foreach (var employee in Model.Employees) {
-                           if (employee.Id == item.TraineeId) {
-                              <td>@employee.FirstName @employee.LastName</td>
+               @if (SignInManager.IsSignedIn(User)) {
+                  var user = await UserManager.GetUserAsync(User);
+                  if (user != null) {
+                     @foreach (var item in Model.TrainingOrder.Reverse()) {
+                        var isAdmin = await UserManager.IsInRoleAsync(user, "admin");
+                        if (!isAdmin) {
+                           if (item.CreatedByUserId != user.Id) {
+                              continue;
                            }
                         }
-                        <td>@Html.DisplayFor(modelItem => item.Priority)</td>
-                        <td>
-                           <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
-                        </td>
-                     </tr>
-                     Model.listCount++;
+
+                        if (Model.listCount < Model.maxCount) {
+                           <tr class="clickable">
+                              <td>@Html.DisplayFor(modelItem => item.Id)</td>
+                              <td>@Html.DisplayFor(modelItem => item.Status)</td>
+                              @foreach (var employee in Model.Employees) {
+                                 if (employee.Id == item.TraineeId) {
+                                    <td>@employee.FirstName @employee.LastName</td>
+                                 }
+                              }
+                              <td>@Html.DisplayFor(modelItem => item.Priority)</td>
+                              <td>
+                                 <a asp-page="./Details" asp-route-id="@item.Id" class="btn nbg-btn btnWhite">View</a>
+                              </td>
+                           </tr>
+                           Model.listCount++;
+                        }
+                     }
                   }
                }
             </table>
