--- a/WCSTrainer/wwwroot/css/universal.css
+++ b/WCSTrainer/wwwroot/css/universal.css
@@ -103,11 +103,11 @@ pre {
 }
 
 .access {
-	color: white;
+	color: var(--textMain);
 }
 
 .login-container {
-	color: white;
+	color: var(--textMain);
 }
 
 
