--- a/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Edit.cshtml
@@ -17,7 +17,7 @@
             <div class="field-container">
                @if (Model.TrainingOrder.Status != "Completed" && Model.TrainingOrder.Status != "Verified") {
                   <form method="post">
-                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                     <div asp-validation-summary="All" class="text-danger"></div>
                      <input hidden asp-for="TrainingOrder.Id" />
 
                      <input asp-for="TrainingOrder.CompletionDate" hidden />
@@ -77,6 +77,7 @@
                                     <li value="@Model.TrainingOrder.TraineeId" class="pill person trainee">
                                        @Model.TrainingOrder.Trainee.FirstName @Model.TrainingOrder.Trainee.LastName
                                     </li>
+
                                  }
                               </ul>
                               <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select</p></div>
@@ -92,9 +93,9 @@
                               <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                            </div>
                            <textarea rows="4"
-                                     asp-for="TrainingOrder.Description"
-                                     placeholder="Describe the skill being trained and the goal.">
-                                   </textarea>
+                              asp-for="TrainingOrder.Description"
+                              placeholder="Describe the skill being trained and the goal.">
+                           </textarea>
                         </div>
                      </div>
                      @if (!Model.TrainingOrder.Status.Equals("Awaiting Approval")) {
@@ -143,8 +144,6 @@
                               </div>
                               <input type="date" asp-for="TrainingOrder.BeginDate" class="form-control" />
                            </div>
-                        } else {
-                           
                         }
                      </div>
                      <div class="form-group">
