--- a/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Scheduling.cshtml
@@ -14,39 +14,37 @@
                      DateTime date = new DateTime(Model.selectedYear, month, 1);
                      string monthName = date.ToString("MMMM");
                      string type = "month-inactive";
-                    
                      if (DateTime.Now.Month == month && DateTime.Now.Year == Model.selectedYear) {
                         type = "month-active";
                      }
-
                      <div class="month @type">
                         <div class="title">
                            <p>@monthName</p>
                         </div>
                         <div class="info">
-                           <p>Preview:</p>
-                           @if (Model.getFirstTrainingOrder(month, 0) != null) {
-                              var order = @Model.getFirstTrainingOrder(month, 0);
-                              <div class="order live">Order #@order.Id - @order.BeginDate</div>
-                           } else {
+                           <p>Orders:</p>
+                           @if (Model.getMonthOrders(month).Count <= 0) {
                               <div class="order gray"></div>
-                           }
-                           @if (Model.getFirstTrainingOrder(month, 1) != null) {
-                              var order = @Model.getFirstTrainingOrder(month, 1);
-                              <div class="order live">Order #@order.Id - @order.BeginDate</div>
                            } else {
-                              <div class="order gray"></div>
+                              foreach (var order in Model.getMonthOrders(month)) {
+                                 if (order != null) {
+                                    <div class="order live">Order #@order.Id - @order.BeginDate</div>
+                                 }
+                              }
                            }
                         </div>
                         <div class="stats">
                            <p>Training Orders: @Model.countMonthOrders(month)</p>
+                           <p>Training Hours: @Model.countOrderHours(month)</p>
                         </div>
                      </div>
                   }
                </div>
-
-               
-
+               <div class="days" id="days" style="display: none;">
+                  @for (int day = 0; day < 30; day++) {
+                     <div class="day">@day</div>
+                  }
+               </div>
             </div>
          </div>
          <div class="tool-container">
@@ -93,3 +91,32 @@
       </div>
    </div>
 </div>
+
+<script>
+   document.addEventListener("DOMContentLoaded", function () {
+      var monthElements = document.getElementsByClassName("month");
+      var months = document.getElementById("months");
+      var days = document.getElementById("days");
+
+      Array.prototype.slice.call(monthElements).forEach(item => {
+         item.addEventListener("click", event => {
+            clickMonth();
+         });
+      });
+
+      days.addEventListener("click", function () {
+         clickDay();
+      })
+
+
+      function clickMonth() {
+         months.style.display = "none";
+         days.style.display = "flex";
+      }
+
+      function clickDay() {
+         months.style.display = "flex";
+         days.style.display = "none";
+      }
+   });
+</script>
