--- a/WCSTrainer/wwwroot/css/site.css
+++ b/WCSTrainer/wwwroot/css/site.css
@@ -621,14 +621,13 @@ nav {
 
 						.panel .body .properties .scheduling .schedule .months .month {
 							width: 20%;
-							height: 200px;
 							min-width: 90px;
-							min-height: 180px;
 							display: flex;
 							flex-direction: column;
 							cursor: pointer;
 							background-color: var(--gray2);
 							flex-grow: 1;
+							justify-content: space-between;
 						}
 
 						.panel .body .properties .scheduling .schedule .months .month-inactive {
@@ -654,6 +653,7 @@ nav {
 							border-bottom: 1px solid var(--gray4);
 							padding: 5px;
 							font-size: 17px;
+							
 						}
 
 						.panel .body .properties .scheduling .schedule .months .month .info {
@@ -682,6 +682,7 @@ nav {
 							}
 
 						.panel .body .properties .scheduling .schedule .months .month .stats {
+
 							padding: 5px;
 							color: var(--textSub2);
 						}
