--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -45,8 +45,7 @@
                                  <span asp-validation-for="TrainingOrder.TraineeId" class="text-danger"></span>
                               </div>
                               <div class="selections">
-                                 <ul id="trainee" class="pill-container">
-                                 </ul>
+                                 <ul id="trainee" class="pill-container"></ul>
                                  <div class="btn bg-btn btnWhite" onclick="openComponent('trainees')"><p>Select Trainee</p></div>
                                  <input id="traineeInput" asp-for="TrainingOrder.TraineeId" hidden />
                               </div>
@@ -58,8 +57,9 @@
                                  <p class="control-label">Description</p>
                                  <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
                               </div>
-                              <textarea rows="4" asp-for="TrainingOrder.Description" placeholder="Describe the skill being trained and the goal.">
-                                 </textarea>
+                              <textarea rows="4" asp-for="TrainingOrder.Description" 
+                                 placeholder="Describe the skill being trained and the goal.">
+                              </textarea>
                            </div>
                         </div>
                         <div class="form-group">
@@ -68,7 +68,8 @@
                                  <p class="control-label">Location</p>
                                  <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
                               </div>
-                              <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations"></select>
+                              <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations">
+                              </select>
                            </div>
                            <div class="form">
                               <div class="labels">
