huge changes, added lessons

--- a/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
+++ b/WCSTrainer/Pages/Shared/RazorComponents/Sidebar.razor
@@ -28,6 +28,7 @@
 @code {
    private bool isAdmin = false;
    private List<(string, string)> links = new List<(string, string)> {
+      ("Lessons", "Lessons"),
       ("Skills", "Skills"),
       ("TrainerGroups", "Trainer Groups"),
       ("Locations", "Locations"),
