--- a/WCSTrainer/Pages/Skills/Create.cshtml
+++ b/WCSTrainer/Pages/Skills/Create.cshtml
@@ -35,10 +35,10 @@
                   <div class="form-group">
                      <div class="form">
                         <div class="labels">
-                           <label asp-for="@Model.TrainingOrdersString" class="control-label"></label>
-                           <span asp-validation-for="@Model.TrainingOrdersString" class="text-danger"></span>
+                           <label asp-for="@Model.LessonString" class="control-label"></label>
+                           <span asp-validation-for="@Model.LessonString" class="text-danger"></span>
                         </div>
-                        <input asp-for="@Model.TrainingOrdersString" class="form-control" />
+                        <input asp-for="@Model.LessonString" class="form-control" />
                      </div>
                   </div>
                   <div class="form-group">
