--- a/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Conclude.cshtml
@@ -26,7 +26,7 @@
                      <input asp-for="TrainingOrder.Status" type="hidden" value="Completed" />
                      <input asp-for="TrainingOrder.Duration" hidden />
                      <input asp-for="TrainingOrder.Priority" hidden />
-                     <input asp-for="TrainingOrder.Description" type="hidden" />
+                     <input asp-for="TrainingOrder.LessonId" type="hidden" />
                      <input asp-for="TrainingOrder.TraineeId" hidden />
                      <input asp-for="TrainingOrder.LocationId" hidden />
                      <input asp-for="TrainingOrder.CreatedByUserId" hidden />
