--- a/WCSTrainer/Pages/TrainingOrders/Create.cshtml
+++ b/WCSTrainer/Pages/TrainingOrders/Create.cshtml
@@ -17,24 +17,20 @@
       <component type="typeof(Sidebar)" render-mode="WebAssemblyPrerendered" />
       <div class="properties">
          <div class="user-form">
-
             <p class="title">Create New Training Order</p>
             <p class="description">Fill out each required field.</p>
-
             @if (SignInManager.IsSignedIn(User)) {
                var user = await UserManager.GetUserAsync(User);
                if (user != null) {
                   <div class="field-container">
                      <form method="post">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
                         <input asp-for="TrainingOrder.Status" hidden value="Awaiting Approval" />
                         @{
                            var date = DateOnly.FromDateTime(DateTime.Now);
                            <input asp-for="TrainingOrder.CreateDate" type="hidden" value="@date" />
                         }
                         <input asp-for="TrainingOrder.CreatedByUserId" type="hidden" value="@user.Id" />
-
                         <input hidden id="employeesData" value="@ViewData["EmployeesJson"]" />
                         <input hidden id="trainergroupsData" value="@ViewData["TrainerGroupsJson"]" />
 
@@ -55,30 +51,12 @@
                            <div class="form">
                               <div class="labels">
                                  <p class="control-label">Description</p>
-                                 <span asp-validation-for="TrainingOrder.Description" class="text-danger"></span>
+                                 <span asp-validation-for="TrainingOrder.LessonId" class="text-danger"></span>
                               </div>
-                              <textarea rows="4" asp-for="TrainingOrder.Description" 
-                                 placeholder="Describe the skill being trained and the goal.">
-                              </textarea>
+                              <input asp-for="TrainingOrder.LessonId" class="form-control" />
                            </div>
                         </div>
-                        <div class="form-group">
-                           <div class="form">
-                              <div class="labels">
-                                 <p class="control-label">Location</p>
-                                 <span asp-validation-for="TrainingOrder.LocationId" class="text-danger"></span>
-                              </div>
-                              <select asp-for="TrainingOrder.LocationId" class="form-control" asp-items="@Model.Locations">
-                              </select>
-                           </div>
-                           <div class="form">
-                              <div class="labels">
-                                 <p class="control-label">Learning Medium</p>
-                                 <span asp-validation-for="TrainingOrder.Medium" class="text-danger"></span>
-                              </div>
-                              <input asp-for="TrainingOrder.Medium" class="form-control" />
-                           </div>
-                        </div>
+                        
                         <div class="form-group">
                            <div class="form">
                               <div class="btn-container">
